--- a/dotfiles/hyprland.conf
+++ b/dotfiles/hyprland.conf
@@ -116,9 +116,9 @@ dwindle {
 # ============================================================================
 
 misc {
-    # Disable anime mascot wallpapers
+    # Disable anime mascot wallpapers (we use swaybg instead)
     force_default_wallpaper = 0
-
+    
     # Disable splash screen
     disable_hyprland_logo = true
 }
@@ -215,3 +215,4 @@ bindm = $mainMod, mouse:273, resizewindow
 
 exec-once = waybar
 exec-once = mako
+exec-once = swaybg -i ~/.config/hypr/wallpaper.jpg -m fill
