Make ghostty default terminal

--- a/dotfiles/hyprland.conf
+++ b/dotfiles/hyprland.conf
@@ -132,7 +132,7 @@ misc {
 $mainMod = SUPER
 
 # Applications
-bind = $mainMod, Return, exec, kitty
+bind = $mainMod, Return, exec, ghostty
 bind = $mainMod, Space, exec, wofi --show drun
 bind = $mainMod, B, exec, firefox
 
