--- a/dotfiles/waybar-config.json
+++ b/dotfiles/waybar-config.json
@@ -12,7 +12,10 @@
     "format": "{name}",
     "on-click": "activate",
     "all-outputs": true,
-    "active-only": false
+    "active-only": false,
+    "persistent-workspaces": {
+      "*": [1, 2, 3, 4, 5]
+    }
   },
   
   "hyprland/window": {
