Remap capslock to HYPER
Add hyprland bindings to manage workspace and window switching.

vim based H and L.

--- a/dotfiles/hyprland.conf
+++ b/dotfiles/hyprland.conf
@@ -24,7 +24,7 @@ input {
 
     # Mouse settings
     follow_mouse = 1
-
+    
     # Touchpad settings
     touchpad {
         natural_scroll = false
@@ -128,8 +128,9 @@ misc {
 # Keybindings
 # ============================================================================
 
-# Main modifier key
+# Main modifier keys
 $mainMod = SUPER
+$hyper = CTRL ALT SHIFT SUPER
 
 # Applications
 bind = $mainMod, Return, exec, ghostty
@@ -185,6 +186,33 @@ bind = , Print, exec, grim -g "$(slurp)" - | wl-copy
 
 # Reload configuration
 bind = $mainMod SHIFT, R, exec, hyprctl reload
+
+# ============================================================================
+# Hyper Key Bindings (Caps Lock + key)
+# ============================================================================
+
+# Previous / next workspace (vim-like)
+bindd = $hyper, h, Switch to previous active workspace, workspace, m-1
+bindd = $hyper, l, Switch to next active workspace, workspace, m+1
+
+# Switch to specific workspaces (using keycodes for number row)
+bindd = $hyper, code:10, Switch to workspace 1, workspace, 1
+bindd = $hyper, code:11, Switch to workspace 2, workspace, 2
+bindd = $hyper, code:12, Switch to workspace 3, workspace, 3
+bindd = $hyper, code:13, Switch to workspace 4, workspace, 4
+bindd = $hyper, code:14, Switch to workspace 5, workspace, 5
+bindd = $hyper, code:15, Switch to workspace 6, workspace, 6
+bindd = $hyper, code:16, Switch to workspace 7, workspace, 7
+bindd = $hyper, code:17, Switch to workspace 8, workspace, 8
+bindd = $hyper, code:18, Switch to workspace 9, workspace, 9
+bindd = $hyper, code:19, Switch to workspace 10, workspace, 10
+
+# Cycle through applications on active workspace (vim-like)
+bindd = ALT, L, Cycle to next window, cyclenext
+bindd = ALT, H, Cycle to prev window, cyclenext, prev
+
+# Fullscreen (maximize width, keep height)
+bindd = $hyper, F, Full width, fullscreen, 1
 
 # ============================================================================
 # Window Rules
