Make hyprland manage window opacity
For now all windows have the same, will change for active and inactive
in the future.

--- a/dotfiles/hyprland.conf
+++ b/dotfiles/hyprland.conf
@@ -73,6 +73,12 @@ decoration {
     }
 }
 
+# ============================================================================
+# Window Opacity
+# ============================================================================
+
+# Set opacity for all windows (active, inactive)
+windowrulev2 = opacity 0.95 0.95, class:.*
 
 # ============================================================================
 # Animations
