Replace wofi with wayland native rofi
Add dotfile for it.

--- a/dotfiles/hyprland.conf
+++ b/dotfiles/hyprland.conf
@@ -136,7 +136,7 @@ $hyper = CTRL ALT SHIFT SUPER
 
 # Applications
 bind = $mainMod, Return, exec, ghostty
-bind = $mainMod, Space, exec, wofi --show drun
+bind = $mainMod, Space, exec, rofi -show drun
 bind = $mainMod, B, exec, firefox
 
 # Window management
