--- a/dotfiles/hyprland/hyprland.conf
+++ b/dotfiles/hyprland/hyprland.conf
@@ -1,5 +1,6 @@
 # Hyprland Configuration
 # Managed by home-manager, symlinked to ~/.config/hypr/hyprland.conf
+# Colors are managed by catppuccin/nix module
 
 # ============================================================================
 # Monitor Configuration
@@ -46,8 +47,7 @@ general {
 
     # Border settings
     border_size = 1
-    col.active_border = rgba(cdd6f4ff) rgba(89b4faff) 45deg
-    col.inactive_border = rgba(45475aff)
+    # Border colors are managed by catppuccin/nix module
 
     # Layout
     layout = dwindle
